# axumancer

./: .env-example  .gitignore  Cargo.toml  README.md
assets/: core.js  style.css
certs/: generate_certs.sh
content/: admin_index.html  index.html  logout.html  protected.html  public.html  register.html  signin.html
scripts/: create_database.sh  table_authentication.sql
src/: auth.rs  helper.rs  main.rs  services.rs
status_pages/: 404.html
